# src/app/core/api/index.ts
@@ -10,6 +10,7 @@ export {
   deleteApiSellerStoreSectionsBySectionId,
   deleteApiWishlist,
   deleteApiWishlistByDocumentId,
+  getApiAdminAudit,
   getApiAdminCategories,
   getApiAdminCategoriesById,
   getApiAdminDashboard,
@@ -124,6 +125,7 @@ export type {
   AddToCartRequest,
   AddToWishlistRequest,
   AdminAuditEntryResponse,
+  AdminAuditLogResponse,
   AdminBulkDocumentsRequest,
   AdminBulkDocumentsResponse,
   AdminDashboardResponse,
@@ -200,6 +202,9 @@ export type {
   ExternalLoginRequest,
   ForgotPasswordRequest,
   GeneratePreviewResponse,
+  GetApiAdminAuditData,
+  GetApiAdminAuditResponse,
+  GetApiAdminAuditResponses,
   GetApiAdminCategoriesByIdData,
   GetApiAdminCategoriesByIdError,
   GetApiAdminCategoriesByIdErrors,
@@ -409,6 +414,7 @@ export type {
   OrderItemResponse,
   OrderPaymentHintsResponse,
   OrderResponse,
+  PagedResponseOfAdminAuditLogResponse,
   PagedResponseOfAdminDocumentListItemResponse,
   PagedResponseOfAdminOpenReportResponse,
   PagedResponseOfAdminPayoutResponse,
